--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@auth/core": "^0.38.0",
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.5.0",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.5",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
