--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@auth/core": "^0.38.0",
     "@auth/prisma-adapter": "^2.8.0",
+    "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
+    "@tanstack/react-query": "^5.68.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.5",
     "next": "15.2.2",
@@ -21,6 +23,8 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
