--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.68.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
@@ -25,6 +32,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.16.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
