--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
