--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:seed": "ts-node prisma/seed.ts"
+    "db:seed": "NODE_OPTIONS='--loader ts-node/esm' ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@auth/core": "^0.38.0",
@@ -25,7 +25,6 @@
     "@sendgrid/mail": "^8.1.4",
     "@tanstack/react-query": "^5.69.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^3.0.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.5",
     "bcrypt": "^5.1.1",
@@ -52,6 +51,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.17.24",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
