--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@sendgrid/mail": "^8.1.4",
     "@tanstack/react-query": "^5.69.0",
     "@types/bcrypt": "^5.0.2",
@@ -33,7 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
@@ -51,7 +53,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.0.15",
+    "@tailwindcss/postcss": "^4.0.16",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.17.27",
     "@types/react": "^19.0.12",
@@ -60,7 +62,7 @@
     "eslint-config-next": "15.2.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^4.0.16",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
