--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@sendgrid/mail": "^8.1.4",
-    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query": "^5.71.1",
     "@types/bcrypt": "^5.0.2",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
@@ -43,30 +43,32 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.1",
-    "sonner": "^2.0.1",
+    "sonner": "^2.0.2",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.0.16",
+    "@tailwindcss/postcss": "^4.0.17",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^3.0.0",
-    "@types/node": "^20.17.27",
+    "@types/node": "^20.17.28",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.16",
+    "tailwindcss": "^4.0.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
