--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-query": "^5.74.4",
     "@types/bcrypt": "^5.0.2",
