--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "db:seed": "NODE_OPTIONS='--loader ts-node/esm' ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/core": "^0.38.0",
+    "@auth/core": "^0.39.0",
     "@auth/prisma-adapter": "^2.9.0",
-    "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.6.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
@@ -28,7 +28,7 @@
     "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@sendgrid/mail": "^8.1.5",
-    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query": "^5.75.2",
     "@types/bcrypt": "^5.0.2",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.8",
@@ -38,7 +38,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.507.0",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
@@ -46,7 +46,7 @@
     "react": "^19.1.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.1",
+    "react-hook-form": "^7.56.2",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
@@ -54,29 +54,33 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.3"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^3.0.0",
-    "@types/node": "^22.15.2",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "eslint": "^9.25.1",
+    "@types/react-dom": "^19.1.3",
+    "eslint": "^9.26.0",
     "eslint-config-next": "^15.3.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.6.0",
-    "tailwindcss": "^4.1.4",
+    "prisma": "^6.7.0",
+    "tailwindcss": "^4.1.5",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "sharp"
+      "@prisma/client",
+      "@prisma/engines",
+      "prisma",
+      "sharp",
+      "unrs-resolver"
     ]
   }
 }
