--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.2",
