--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^6.10.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -29,7 +29,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sendgrid/mail": "^8.1.5",
-    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query": "^5.80.10",
     "@types/bcrypt": "^5.0.2",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.0",
@@ -40,7 +40,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.507.0",
-    "next": "^15.3.3",
+    "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
@@ -48,38 +48,39 @@
     "react-countup": "^6.5.3",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.57.0",
+    "react-hook-form": "^7.58.1",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.56"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^3.0.0",
-    "@types/node": "^22.15.30",
-    "@types/react": "^19.1.6",
+    "@types/node": "^22.15.32",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "^15.3.3",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.4",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "prisma": "^6.9.0",
-    "tailwindcss": "^4.1.8",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "prisma": "^6.10.1",
+    "tailwindcss": "^4.1.10",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@prisma/client",
       "@prisma/engines",
+      "@tailwindcss/oxide",
       "prisma",
       "sharp",
       "unrs-resolver"
