--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.11.0",
+    "@prisma/client": "^6.11.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -40,37 +40,37 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.510.0",
-    "next": "^15.3.4",
+    "next": "^15.3.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.59.0",
+    "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
-    "sonner": "^2.0.5",
-    "swr": "^2.3.3",
+    "sonner": "^2.0.6",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.67"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^3.0.0",
-    "@types/node": "^22.16.0",
+    "@types/node": "^22.16.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.30.1",
-    "eslint-config-next": "^15.3.4",
+    "eslint-config-next": "^15.3.5",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
-    "prisma": "^6.11.0",
+    "prisma": "^6.11.1",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
@@ -81,6 +81,7 @@
       "@prisma/client",
       "@prisma/engines",
       "@tailwindcss/oxide",
+      "esbuild",
       "prisma",
       "sharp",
       "unrs-resolver"
