--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-query": "^5.83.0",
     "@types/bcrypt": "^5.0.2",
-    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -41,7 +41,7 @@
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
-    "next": "^15.4.2",
+    "next": "^15.4.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
@@ -49,7 +49,7 @@
     "react-countup": "^6.5.3",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "recharts": "^3.1.0",
@@ -57,7 +57,8 @@
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -68,7 +69,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.31.0",
-    "eslint-config-next": "^15.4.2",
+    "eslint-config-next": "^15.4.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.12.0",
