--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
     "lucide-react": "^0.525.0",
+    "mailgun.js": "^12.0.3",
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
