fixed build error

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
       "@prisma/client",
       "@prisma/engines",
       "@tailwindcss/oxide",
+      "bcrypt",
       "esbuild",
       "prisma",
       "sharp",
