--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.18",
     "dayjs-plugin-utc": "^0.1.2",
+    "jotai": "^2.14.0",
     "lucide-react": "^0.544.0",
     "mailgun.js": "^12.0.3",
     "next": "^15.5.3",
