--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "kirk-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.19.0"
+  },
   "scripts": {
     "dev": "next dev --port 3005 --turbopack",
     "build": "next build",
