--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^7.0.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "@prisma/client-runtime-utils": "^7.1.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -46,16 +48,17 @@
     "dayjs-plugin-utc": "^0.1.2",
     "jotai": "^2.15.2",
     "lucide-react": "^0.554.0",
-    "mailgun.js": "^12.3.0",
-    "next": "^16.0.6",
+    "mailgun.js": "^12.3.1",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
-    "react": "^19.2.0",
+    "pg": "^8.16.3",
+    "react": "^19.2.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "^9.11.3",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "^7.67.0",
+    "react-dom": "^19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-intersection-observer": "^10.0.0",
     "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
@@ -68,17 +71,20 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
+    "@prisma/config": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.6",
-    "prettier": "^3.7.3",
+    "eslint-config-next": "^16.0.7",
+    "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "prisma": "^7.0.1",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
